--- a/Bootstrap .html
+++ b/Bootstrap .html
@@ -264,14 +264,20 @@
       <div class="last-fast-sec">
         <div class="next-pag">NEXT PAGE</div>
         <div class="CASE"> CASE STUDIES</div>
-        <div class="we-word"><p>We would love to hear from
-          you. LET’S WORK — TOGETHER</p></div>
-          <button class="btn btn-dark rounded-5">Contact US</button>
+        <div class="we-word">
+          <p>We would love to hear from
+            you. LET’S WORK — TOGETHER</p>
+        </div>
+        <button class="btn btn-dark rounded-5">Contact US</button>
       </div>
       <div class="last-second-sec">
-          <div class="">Business inquiries</div>
+        <div class="">Business inquiries</div>
       </div>
     </div>
+  </div>
+  <div>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, blanditiis nisi culpa laborum ea tempore. Rem
+    totam quaerat eos. Eaque incidunt deserunt cumque. Dicta, doloremque porro! Aliquid earum necessitatibus odit.
   </div>
 
 
